[project]
name = "timevae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib==3.7.2",
    "numpy==1.26.4",
    "pandas==2.1.4",
    "pyyaml==6.0.1",
    "scikit-learn==1.4.2",
    "tensorflow==2.16.1",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]
