[project]
name = "timevae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib==3.7.2",
    "numpy==1.26.4",
    "pandas==1.3.4",
    "pyyaml==6.0.1",
    "scikit-learn==1.4.2",
    "seaborn>=0.13.2",
    "tensorflow==2.16.1",
    "tqdm>=4.67.1",
]
